# BSUIR_Labs_OAIP

./: README.md
1 семестр/ЛР1/: FileName.c
1 семестр/ЛР2/: Source.c
1 семестр/ЛР3/: FileName.c
1 семестр/ЛР4/: FileName.c
1 семестр/ЛР5/: main.c  solotion.c  solution.h
1 семестр/ЛР6/: main.c  solution.c  solution.h
1 семестр/ЛР7и8/: main.c  solution.c  solution.h
2 семестр/Английский/: Тема 2.docx  Тема 3.docx  Тема 4.docx  Тема 6.docx  Тема 7.docx  Тема 9.docx  тема 1.docx  тема 10.docx  тема 5.docx  тема 8.docx
2 семестр/ИКГ/: 109 вар.dwg  Обозначение разрезов.dwg  Пересечение.bak  Пересечение.dwg  Проба пересеч (2).dwg  Проекционный чертёж.dwt  Сборка.dwg  Сопряжение1.bak  Сопряжение1.dwt  электросхема.dwg
2 семестр/Курсач/: L.txt  N.lst  OCHS.TXT  OCHU.TXT  Курсовая на печать резерв (изменен).docx  СхемыАилоцу (2) (2).dwg
2 семестр/ЛР1/: Main.cpp
2 семестр/ЛР3/: Solution.h
2 семестр/ЛР4/: Solution.cpp  Solution.h
2 семестр/ЛР5/: Main.cpp  Solution.cpp
2 семестр/ЛР6/: cubes_data.txt  function.cpp  solution.cpp
2 семестр/ЛР7/: data.txt  function.cpp  main.cpp  solution.cpp  solution.h
2 семестр/ТЭЦ/: ТР1 Часть 1.docx  ТР1 Часть 2.docx  ТЭЦ Лаба 3.docx  ТЭЦ лаба 1.docx  ТЭЦ лаба 2.docx  ТЭЦ лаба 4.docx
2 семестр/УПОЗН/: car.txt  main.cpp  transport.cpp  transport.h
3 семестр/БЖЧ/: BJCH  README.txt  image_utils.py  install.bat  main.py  requirements.txt  run.bat  styles.qss  (+1 more)
3 семестр/Курсач/kursach/: CMakeLists.txt  README.md  main.cpp
3 семестр/Курсач/kursach/core/: HistoryManager.cpp  HistoryManager.h  List.h  Order.cpp  Order.h  OrderList.cpp  OrderList.h  Vehicle.cpp  Vehicle.h
3 семестр/Курсач/kursach/data/: business.txt  comfort.txt  economy.txt  minivan.txt  orders_data.txt
3 семестр/Курсач/kursach/exceptions/: TaxiParkException.cpp  TaxiParkException.h
3 семестр/Курсач/kursach/storage/: FileManager.cpp  FileManager.h
3 семестр/Курсач/kursach/ui/: MainWindow.cpp  MainWindow.h  OrderForm.cpp  OrderForm.h  OrdersCalendarWindow.cpp  OrdersCalendarWindow.h  OrdersWindow.cpp  OrdersWindow.h  StatisticsWindow.cpp  StatisticsWindow.h  VehicleForm.cpp  VehicleForm.h  styles.qss
3 семестр/Курсач/kursach/vehicles/: BusinessCar.cpp  BusinessCar.h  ComfortCar.cpp  ComfortCar.h  EconomyCar.cpp  EconomyCar.h  Minivan.cpp  Minivan.h  TaxiVehicle.cpp  TaxiVehicle.h
(+218 files in other folders)
